--- a/app/src/main/res/layout/enrollment_course.xml
+++ b/app/src/main/res/layout/enrollment_course.xml
@@ -3,76 +3,72 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1.5"
-        android:orientation="vertical"
+        android:layout_weight="0.9"
+        android:orientation="horizontal"
         >
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:layout_weight="1"
-            >
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="horizontal"
+                            android:layout_weight="1"
+                            >
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/coursesubject"
-                android:layout_weight="1.5"
-                android:layout_gravity="center"
-                />
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:id="@+id/coursesubject"
+                                android:layout_weight="0.9"
+                                android:layout_gravity="center"
+                                />
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/courseprofessor"
-                android:layout_weight="1.5"
-                android:layout_gravity="center"
-                />
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:id="@+id/coursecredit"
+                                android:layout_weight="1"
+                                android:layout_gravity="center"
+                                />
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:id="@+id/coursedivide"
+                                android:layout_gravity="center"
+                                android:layout_weight="1"
+                                />
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:id="@+id/courseprofessor"
+                                android:layout_gravity="center"
+                                android:layout_weight="1"
+                                />
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:id="@+id/courseclass"
+                                android:layout_gravity="center"
+                                android:layout_weight="1"
+                                />
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:id="@+id/coursetime"
+                                android:layout_gravity="center"
+                                android:layout_weight="1"
+                                />
 
 
+                    </LinearLayout>
         </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="horizontal"
-            >
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/courseclass"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/coursedivide"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/coursetime"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                />
-
-
-        </LinearLayout>
-
-    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -82,12 +78,11 @@
 
         <Button
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:id="@+id/courseButton1"
             android:text="신청"
-            android:textSize="20dp"
+            android:textSize="10dp"
             />
 
     </LinearLayout>
-
 </LinearLayout>
