--- a/app/src/main/res/layout/enrollment_course.xml
+++ b/app/src/main/res/layout/enrollment_course.xml
@@ -25,21 +25,23 @@
                                 android:id="@+id/coursesubject"
                                 android:layout_weight="0.9"
                                 android:layout_gravity="center"
+                                android:layout_marginRight="7dp"
                                 />
 
                             <TextView
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:id="@+id/coursecredit"
-                                android:layout_weight="1"
+                                android:layout_weight="1.035"
                                 android:layout_gravity="center"
+                                android:layout_marginRight="10dp"
                                 />
                             <TextView
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:id="@+id/coursedivide"
-                                android:layout_gravity="center"
-                                android:layout_weight="1"
+                                android:layout_gravity="right"
+                                android:layout_weight="1.1"
                                 />
 
                             <TextView
@@ -47,7 +49,8 @@
                                 android:layout_height="match_parent"
                                 android:id="@+id/courseprofessor"
                                 android:layout_gravity="center"
-                                android:layout_weight="1"
+                                android:layout_weight="0.9"
+                                android:layout_marginLeft="8dp"
                                 />
 
                             <TextView
