--- a/app/src/main/res/layout/enrollment_course.xml
+++ b/app/src/main/res/layout/enrollment_course.xml
@@ -80,11 +80,18 @@
         >
 
         <Button
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="6dp"
+            android:layout_marginTop="2dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
             android:id="@+id/courseButton1"
+            android:textSize="15dp"
+            android:textStyle="bold"
+            android:textColor="#ffffff"
+            android:background="@color/color_Main"
             android:text="신청"
-            android:textSize="10dp"
             />
 
     </LinearLayout>
