--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,8 +5,30 @@
     android:orientation="vertical"
     android:background="@color/color_Main"
     tools:context="org.androidtown.hansungclass.ViewPager.HomeFragment">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="50dp"
+    android:layout_marginBottom="50dp"
+    android:padding="10dp"
+    android:orientation="vertical">
+<TextView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="요일"
+    android:textColor="@color/color_White"
+    android:gravity="center"
+    android:layout_gravity="center"/>
 
+    <ListView
+        android:id="@+id/listView"
+        android:background="@drawable/list_cell"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
+    </ListView>
+
+</LinearLayout>
 
 
 </LinearLayout>
