--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -49,6 +49,7 @@
 
     <ListView
         android:id="@+id/listView"
+        android:layout_marginTop="10px"
         android:background="@drawable/list_cell"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
