--- a/app/src/main/res/layout/listhome_item.xml
+++ b/app/src/main/res/layout/listhome_item.xml
@@ -4,7 +4,11 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/time"
+        android:id="@+id/ntime"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:textColor="@color/color_White"
+        android:padding="5px"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="3"
@@ -12,6 +16,9 @@
 
     <TextView
         android:id="@+id/course"
+        android:layout_gravity="center"
+        android:textColor="@color/color_White"
+        android:padding="5px"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
