수업시작 10분전에 알림띄우기

--- a/app/src/main/res/layout/fragment_table.xml
+++ b/app/src/main/res/layout/fragment_table.xml
@@ -93,17 +93,16 @@
                 />
 
             <TextView
-                android:text="월 0"
-                android:textSize="5dp"
+                android:id="@+id/monday0"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="3"
-                android:gravity="center"
-                android:textColor="#ffffff"
-                android:textStyle="bold"
                 android:background="@drawable/cell_shape"
-                android:id="@+id/monday0"
-                />
+                android:gravity="center"
+                android:text="월 0"
+                android:textColor="#ffffff"
+                android:textSize="5dp"
+                android:textStyle="bold" />
 
             <TextView
                 android:text="화 0"
