--- a/app/src/main/res/layout/activity_loading.xml
+++ b/app/src/main/res/layout/activity_loading.xml
@@ -13,6 +13,6 @@
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_gravity="center"
-        android:background="@drawable/hansungclass2" />
+        android:background="@drawable/hansungclass" />
 
 </LinearLayout>
