다이얼로그뜨기

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="color_Main">#0DBBB6</color>
     <color name="color_White">#FCFCFC</color>
     <color name="color_green">#aaddda</color>
+    <color name="color_underbar">#A9F5E1</color>
 </resources>
